update 0 inicio del proyecto

--- a/todo-redux/src/index.css
+++ b/todo-redux/src/index.css
@@ -1,13 +1,16 @@
+
+body {
+  display         : flex;
+  align-items     : center;
+  font-family     : 'Montserrat',
+                    sans-serif;
+  justify-content : center;
+}
+
 .container {
   display         : flex;
   align-items     : center;
   justify-content : center;
-  justify-items: center;
-}
-
-body {
-  font-family : 'Montserrat',
-                sans-serif;
 }
 
 .card {
