agregamos nueva variable ya que en el anterior modificabamos el estado directamente en list por lo que se creo uno nuevo clonandolo

--- a/todo-redux/src/index.css
+++ b/todo-redux/src/index.css
@@ -1,23 +1,20 @@
-
 body {
-  display         : flex;
-  align-items     : center;
-  font-family     : 'Montserrat',
-                    sans-serif;
-  justify-content : center;
+  font-family : 'Roboto',
+                sans-serif;
 }
 
 .container {
-  display         : flex;
-  align-items     : center;
-  justify-content : center;
+  display        : flex;
+  align-items    : center;
+  flex-direction : column;
 }
 
 .card {
-  padding          : 1em 2em;
-  border-color     : #c3c3c3;
-  background-color : #fbfbfb;
-  box-shadow       : 4px 4px;
+  margin-bottom    : 2rem;
+  padding          : 1rem 4rem;
+  background-color : #e5e5e5;
+  box-shadow       : 0 3px 6px rgba(0, 0, 0, 0.16),
+                     0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 .card h1 {
@@ -25,41 +22,39 @@ body {
 }
 
 button {
-  display          : inline-block;
-  box-sizing       : border-box;
-  position         : relative;
-  min-width        : 64px;
-  height           : 36px;
-  padding          : 0 16px;
-  color            : rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
-  overflow         : hidden;
+  margin           : 2px 6px;
+  padding          : 10px 24px;
+  color            : #fff;
   border           : none;
-  border-radius    : 4px;
-  background-color : rgb(var(--pure-material-primary-rgb, 33, 150, 243));
-  outline          : none;
-  box-shadow       : 0 3px 1px -2px rgba(0, 0, 0, 0.2),
-                     0 2px 2px 0 rgba(0, 0, 0, 0.14),
-                     0 1px 5px 0 rgba(0, 0, 0, 0.12);
-  text-align       : center;
-  text-transform   : uppercase;
-  text-overflow    : ellipsis;
-  vertical-align   : middle;
-  font-family      : var(--pure-material-font, "Roboto", "Segoe UI", BlinkMacSystemFont, system-ui, -apple-system);
-  font-size        : 14px;
-  font-weight      : 500;
-  line-height      : 36px;
-  transition       : box-shadow 0.2s;
-  cursor           : pointer;
+  border-radius    : 3px;
+  background-color : #4880DF;
+  font-size        : 1em;
+  transition       : all 0.15s ease;
 }
 
 button:hover {
-  opacity : 0.50;
+  background-color : #416BB2;
+  cursor           : pointer;
 }
 
 input {
-  width         : 300px;
-  padding       : 10px 10px 10px 5px;
-  border        : none;
-  border-bottom : 1px solid #757575;
-  font-size     : 18px;
+  -webkit-appearance : none;
+  padding            : 8px 0;
+  color              : #223254;
+  border             : 0;
+  border-bottom      : 2px solid #c8ccd4;
+  border-radius      : 0;
+  background         : none;
+  font-family        : inherit;
+  font-size          : 1em;
+  font-weight        : 500;
+}
+
+input:hover {
+  background : rgba(34,50,84,0.03);
+}
+
+input:focus {
+  background : none;
+  outline    : none;
 }
